from .AbstractScannerStrategy import AbstractScannerStrategy

class NucleiScannerStrategy(AbstractScannerStrategy):

    def _parse(self):
        pass

    def execute(self):
        pass

    def _instruction_interpreter(self):
        pass